Tue Aug 20 12:22:53 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* configure.in (AC_C_CHAR_UNSIGNED): Removed; it is not used
	anywhere.
	* config.h.in, configure: Regenerated.
	* os2/config.h, vms/config.h, windows-NT/config.h: Likewise,
	remove __CHAR_UNSIGNED__.

Fri Aug 16 13:37:19 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.spec (%description): Replace description with one that
	resembles the release announcements we have been sending out.  The
	previous one was out of date and not really focused on describing
	what CVS does.
	(%build): Don't define SERVER_FLOWCONTROL; if we are ready to make
	this is the default it should be for all kinds of builds, not just
	those via RPM.

Fri Aug 16 16:09:59 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* cvs.spec: new file.  This is a template for a RPM specification
	file (which is used by 'make spec').

	* Makefile.in (installdirs-local): new (empty) target
	(all install uninstall installdirs): add installdirs to list of
	targets which are done for all subdirs 
	(spec): new target to create a rpm specification file (which can
	be used to create RPM source and binary packages)
	(dist): depend on spec (which now also creates .fname)

Wed Aug 14 13:59:11 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* configure.in (AC_REPLACE_FUNCS): add getspnam for reading shadow
	password entries
	* configure: regenerated
	* config.h.in: regenerated

Mon Aug 12 14:15:31 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (config.status): When running config.status
	--recheck, preserve the value of CFLAGS.

Fri Aug  9 14:11:31 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* TESTS: Also mention dejagnu advantages.

Thu Aug  8 16:00:55 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* TESTS (ABOUT STDOUT AND STDERR): New section.
	(ABOUT TEST FRAMEWORKS): Add sed/cmp/diff (a la C News) as an option.

	* NEWS: Change entry regarding "cvs log" not invoking "rlog" so
	that it emphasizes user-visible behaviors.
