@@ -18,7 +18,6 @@ AC_PREFIX_PROGRAM(cvs)
 AC_C_CROSS
 
 AC_C_CONST
-AC_C_INLINE
 
 AC_PROG_INSTALL
 AC_PROG_RANLIB
